--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <link rel="stylesheet" href="CSS/style.css">
         <title>The Bricks Demo</title>
     </head>
-    <body>
-        
+    <body onload="drawBall()">
+        <canvas id="canvas" width="300" height="300"></canvas>
         <script src="JS/script.js"></script>
     </body>
 </html>
