--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="CSS/style.css">
         <title>The Bricks Demo</title>
     </head>
-    <body onload="drawBall()">
+    <body onload="ballMovement()">
         <canvas id="canvas" width="300" height="300"></canvas>
         <script src="JS/script.js"></script>
     </body>
