--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <link rel="stylesheet" href="CSS/style.css">
         <title>The Bricks Demo</title>
     </head>
-    <body onload="ballMovement()">
-        <canvas id="canvas" width="300" height="300"></canvas>
-        <script src="JS/script.js"></script>
+    <body>
+        <canvas id="gameContainer" width="550" height="800">
+        </canvas>
+        <script src="JS/game.js"></script>
+        <script src="JS/visuals.js"></script>
     </body>
 </html>
